unpackaged/main/default/objects/CLT_PersonalEmailTemplateSignature__mdt/CLT_PersonalEmailTemplateSignature__mdt.object-meta.xml
<CustomObject>
    <label>CLT PersonalEmailTemplateSignature</label>
    <pluralLabel>CLT PersonalEmailTemplateSignatures</pluralLabel>
</CustomObject>