unpackaged/main/default/objects/CLT_PersonalEmailTemplateSignature__mdt/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <label>Language Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>