unpackaged/main/default/objects/CLT_PersonalEmailTemplateSignature__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>plainText</fullName>
                <default>true</default>
                <label>plainText</label>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>