unpackaged/main/default/objects/CLT_PersonalEmailTemplateSignature__mdt/fields/UserLanguage__c.field-meta.xml
<CustomField>
    <fullName>UserLanguage__c</fullName>
    <label>User Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>