unpackaged/main/default/objects/CLT_PersonalEmailTemplateSignature__mdt/listViews/All_CLT_PersonalEmailTemplateSignatures.listView-meta.xml
<ListView>
    <fullName>All_CLT_PersonalEmailTemplateSignatures</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>LanguageCode__c</columns>
    <columns>Language__c</columns>
    <columns>UserLanguage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CLT PersonalEmailTemplateSignatures</label>
    <language>en_US</language>
</ListView>